Fix alignment of footer with custom text

--- a/assets/built/theme.css
+++ b/assets/built/theme.css
@@ -1,2 +1,2 @@
-.site-footer-nav .social-link-gh{padding:0}.social-link-gh svg{height:1.6rem}.site-footer-nav .social-link-so{padding:0}.social-link-so svg{height:1.6rem}.post-full-meta-reading-time{color:var(--blue)}
+.site-footer-nav .social-link-gh{padding:0}.social-link-gh svg{height:1.6rem}.site-footer-nav .social-link-so{padding:0}.social-link-so svg{height:1.6rem}.post-full-meta-reading-time{color:var(--blue)}.copyright-blurb{text-align:center;max-width:375px;padding:5px}
 /*# sourceMappingURL=theme.css.map */
